<resources>
    <!-- App Title -->
    <string name="app_name">Hallel</string>

    <!-- Update Dialog -->
    <string name="dialog_update_title">Nova versão disponível</string>
    <string name="dialog_update_message">Deseja atualizar?</string>
    <string name="dialog_update_positive_button_text">Sim</string>
    <string name="dialog_update_negative_button_text">Não</string>

    <!-- Update Progress -->
    <string name="progress_update_text">Atualizando</string>

    <!-- Access -->
    <string name="access_btn_access">Ocorreu um erro ao registrar o usuário. Tente novamente mais tarde</string>
    <string name="access_btn_register">Registrar</string>
    <string name="access_txt_birthday">Data de nascimento</string>
    <string name="access_txt_privacy_policy">Li e aceito a politica de privacidade</string>
    <string name="access_hint_email">Email</string>
    <string name="access_hint_phone">Telefone</string>
    <string name="access_hint_name">Name</string>
    <string name="access_txt_fail_on_register_new_user">Ocorreu um erro ao registrar o usuário. Tente novamente mais tarde</string>
    <string name="access_txt_invalid_birthday">Data de aniversário inválida</string>
    <string name="access_txt_invalid_phone">Telefone inválido</string>
    <string name="access_txt_invalid_name">Nome inválido</string>
    <string name="access_txt_invalid_email">Email inválido</string>
    <string name="access_txt_access_title">Acessar</string>
    <string name="access_txt_privacy_policy_text">Politica de privacidade</string>
    <string name="access_txt_register_title">Cadastrar</string>
    <string name="access_txt_unchecked_privacy_policy_text">Para realizar o cadastro, é necessário aceitar a politica de privacidade</string>
    <string name="access_txt_user_not_registered">Ops! Não encontramos seu cadastro.\nRegistre para poder acessar o app</string>
    <string name="access_txt_access_subtitle">Informe seu email para poder acessar</string>

    <!-- Home -->
    <string name="title_home">Home</string>
    <string name="title_list_sponsor">Patrocinadores</string>
    <string name="title_list_guest">Participantes</string>

    <!-- General -->
    <string name="open_link_error">Ops! Link indisponível no momento</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_schedule">Agenda</string>
    <string name="menu_my_schedule">Minha Agenda</string>
    <string name="menu_main_stage">Palco Central</string>
    <string name="menu_module">Modulos</string>
    <string name="menu_guests">Participantes</string>
    <string name="menu_sponsor">Patrocinadores</string>
    <string name="menu_history">História</string>
    <string name="menu_map">Mapa do evento</string>
    <string name="menu_rating">Avaliação</string>
</resources>
