<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_schedule"
        android:title="@string/menu_schedule" />
    <item
        android:id="@+id/menu_my_schedule"
        android:title="@string/menu_my_schedule" />
    <item
        android:id="@+id/menu_main_stage"
        android:title="@string/menu_main_stage" />
    <item
        android:id="@+id/menu_module"
        android:title="@string/menu_module" />
    <item
        android:id="@+id/menu_guests"
        android:title="@string/menu_guests" />
    <item
        android:id="@+id/menu_sponsor"
        android:title="@string/menu_sponsor" />
    <item
        android:id="@+id/menu_history"
        android:title="@string/menu_history" />
    <item
        android:id="@+id/menu_map"
        android:title="@string/menu_map" />
    <item
        android:id="@+id/menu_rating"
        android:title="@string/menu_rating" />
</menu>
